@@ -1,9 +1,12 @@
+
+	* feature: improve look&feel and usability of Tip of the day
 	* feature: move guesser
 	* bugfix: update theme when pieces are changed
 	* bugfix: fix some drag&drop problems
 	* bugfix: segfault when truncating moves from empty game
+	* bugfix: ask for promoted piece only for legal moves
 
-Mon 23 Feb 2007 18:59:47 CET	Version 0.3
+Mon 23 Apr 2007 18:59:47 CET	Version 0.3
 
 	* feature: display ECO information
 	* feature: move pieces by drag&drop
